Fix app name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Head pat Elia",
-  "name": "Head pat Elia Stellaria",
+  "short_name": "Head Pat Elia",
+  "name": "Head Pat Elia Stellaria",
   "icons": [
     {
       "src": "favicon.ico",
